test/cases/bad/bad038.lat
// Not related by hierarchy

class A {

}

class B1 extends A {
}

class B2 extends A {
}

int main() {
    // new A == new B1; // ok
    new B1 == new B2;

    return 0;
}